fixed a little planet stuck on sun

--- a/css/style.css
+++ b/css/style.css
@@ -332,11 +332,11 @@ body {
 
 /* Netuno */
 
-#netuno {
+#neptune {
   font-size: 18em;
 }
 
-#netuno.orbit {
+#neptune.orbit {
   width: 12em;
   height: 12em;
   margin-top: -6em;
